src/components/Toobar/Toobar.module.css
.Toobar {
  height: 50px;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: white;
  display: flex;
  border-bottom: 2px solid red;
  justify-content: space-between;
  align-items: center;
  padding: 0 100px;
  box-sizing: border-box;
  z-index: 90;
}

.Toobar nav {
  height: 100%;
}

.Logo {
  padding-top: 40px;
  height: 100%;
}

@media (max-width: 499px) {
  .Toobar {
    height: 50px;
    padding: 0 20px;
  }

  .DesktopOnly {
    display: none;
  }

  .Logo {
    display: none;
  }
}

